# EVOLVE

./: .env  .gitignore  404.html  LICENSE.txt  README.md  compose-dev.yml  compose.yml  docker-compose-dev.yml  docker-compose.yml  docker-push.sh  index.html  mkdocs.yml  requirements.txt  setup.py  sitemap.xml  test.py
.github/: docker_push.yml
.github/ISSUE_TEMPLATE/: config.yml
agent/: Dockerfile  pyproject.toml
agent/agent/: base_load.py  energy_storage.py  ev_aggregate.py  helper_functions.py  process_ev.py  process_solar.py  rabbit_mq_consumer.py  scenario_processor.py
api/: Dockerfile  custom_models.py  rabbit_mq.py  requirements.txt  scenario_form_model_deprecated.py  server.py  timeseries_data.py
api/dependencies/: dependency.py
api/routes/: label_routes.py  notification_routes.py  report_routes.py  scenario_labels_routes.py  scenario_metadata_routes.py  timeseries_data_comment_routes.py  timeseries_data_routes.py  timeseries_data_sharing_routes.py
common/: electric_vehicle.py  energy_storage.py  scenario.py  solar.py
deprecated-evolve-instruction/: index.html
developer-installation/: index.html
developers-guide/: index.html
docker-installation/: index.html
docs/: deprecated-evolve-instruction.md  developer-installation.md  developers-guide.md  docker-installation.md  evolve_new_dashboard.md  index.es.md  index.md  metrics.en.md  metrics.es.md  metrics.md  usage.md
docs/evolve-core/: ev.md  index.md  storage.md
en/: index.html
en/deprecated-evolve-instruction/: index.html
en/developer-installation/: index.html
en/docker-installation/: index.html
en/evolve_new_dashboard/: index.html
en/metrics/: index.html
en/usage/: index.html
es/: index.html
es/deprecated-evolve-instruction/: index.html
es/developer-installation/: index.html
es/docker-installation/: index.html
es/evolve_new_dashboard/: index.html
es/metrics/: index.html
es/usage/: index.html
evolve/: main.py  requirements.txt
evolve-agent/: Dockerfile  pyproject.toml
evolve-agent/agent/: __init__.py  agent_config.py  base_load.py  energy_storage.py  postgres_db_context.py  process_ev.py  process_solar.py
evolve-agent/tests/: test_agent.py
evolve-api/: Dockerfile  pyproject.toml
evolve-api/api/: __init__.py  label_form_model.py  models.py  rabbit_mq.py  requirements.txt  server.py  timeseries_data.py
evolve-api/api/dependencies/: dependency.py
evolve-api/api/routes/: label_routes.py  notification_routes.py  report_routes.py  scenario_labels_routes.py  scenario_metadata_routes.py  timeseries_data_comment_routes.py  timeseries_data_routes.py  timeseries_data_sharing_routes.py
evolve-api/evolve-common/common/: __init__.py
evolve-common/: pyproject.toml
evolve-common/common/: scenario.py
evolve-core/: index.html  pyproject.toml  readme.md  requirements.txt  setup.py
evolve-core/ev/: index.html
evolve-core/evolve/: __init__.py
evolve-core/evolve/battery/: battery.py  peak_shaving_strategy.py  self_consumption_strategy.py  timed_strategy.py
evolve-core/evolve/ev/: ev_constants.py  ev_interfaces.py  ev_module.py
evolve-core/evolve/solar/: solar.py
evolve-core/solar/: index.html
evolve-core/storage/: index.html
evolve-core/tests/: test_battery.py  test_ev.py  test_solar.py
evolve-core/tests/data/: irradiance.csv  test_load.csv
evolve-docs/: mkdocs.yml  requirements.txt
evolve-docs/docs/: developers-guide.md  evolve_new_dashboard.md  index.md
evolve-models/: electric_vehicle.py  energy_storage.py  solar.py
evolve-ui/: Dockerfile  nginx.conf  package-lock.json  package.json
evolve-ui/src/: App.tsx
evolve_new_dashboard/: index.html
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  type-definition.d.ts
frontend/public/: index.html
frontend/src/: App.js  App.tsx  (+3 more)
input_data/: setting.json  solar_data.csv  transformer_data.csv  transformer_metadata.csv
metrics/: index.html
react-app/: .dockerignore  Dockerfile  package-lock.json  package.json
search/: search_index.json
src/: .dockerignore  Dockerfile  constants.py  requirements.txt
usage/: index.html
(+221 files in other folders)
