[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evolve-common"
dynamic = ["version"]
description = ''
requires-python = ">=3.10"
keywords = []
authors = [
  { name = "Kapil Duwadi", email = "Kapil.Duwadi@nrel.gov" },
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[tool.hatch.version]
path = "common/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "common"
]

