[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evolve-core"
dynamic = ["version"]
description = "Modern tool for understanding impact of distributed energy resources on net load."
readme = "readme.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Kapil Duwadi", email = "kapil.duwadi@nrel.gov" },
    {name = "Erik Pohl", email = "erik.pohl@nrel.gov"}
]
keywords = [
    "Distribution",
    "Electric",
    "Energy",
    "Net",
    "PV",
    "Storage",
    "System",
    "Vehicle",
    "load",
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy",
    "polars",
    "pvlib",
    "pydantic",
    "pytest",
    "timezonefinder",
]

[project.urls]
Homepage = "https://github.com/NREL/evolve"

[tool.hatch.version]
path = "evolve/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/evolve",
]

[tool.hatch.build.targets.wheel]
packages = [
    "evolve"
]